# faustctf-2024-faust-vault

./: .gitignore  Dockerfile.ci  LICENSE.txt  Makefile  README.md  docker-compose.yml  metadata.yml  test.html
checker/: template.py
database/: init.sql
exploit/exploit1/: Cargo.toml
exploit/exploit1/src/: main.rs
exploit/exploit2/: Cargo.toml
exploit/exploit2/src/: main.rs
faustvault/: Dockerfile  Dockerfile.deps
faustvault/src/: go.mod  main.go
faustvault/src/kvs/: kvs.go
frontend/: .babelrc  Dockerfile.deps  Dockerfile.deps.deps  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.production.js
frontend/rsa/: Cargo.toml
frontend/rsa/src/: lib.rs
frontend/src/: App.tsx  index.html
frontend/src/components/: Navigation.tsx
frontend/src/pages/: Community.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx  Secrets.tsx
frontend/src/providers/: AuthProvider.tsx
frontend/wasm-crypt/: Cargo.toml
frontend/wasm-crypt/src/: lib.rs
nginx/: Dockerfile  Dockerfile.nodemodules  nginx.conf
