[package]
name = "wasm-crypt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
rand = {version = "0.8.5", default-features = false}
rand_chacha = {version = "0.3.1", default-features = false}
cipher = {version = "0.4.4", features = ["block-padding"], default-features = false}
aes = {version = "0.8.4", default-features = false}
cbc = {version = "0.1.2", features = ["alloc"], default-features = false}
num-bigint = { version = "0.4.6", features = ["rand"], default-features=false }
num-traits = { version = "0.2.19", default-features=false }
num-integer = { version = "0.1.46", default-features=false }
cityhasher = { version = "0.1.0", default-features = false }

[profile.release]
opt-level = 3
